# tt

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/tt/: __main__.py  analysis.py  cli.py  detect.py  draw.py  frame.py  math.py  polygon.py  vid.py
tests/: test_frame.py
tests/data/: frame.csv
